Add support for Widevine

--- a/app/extensions/brave/locales/en-US/app.properties
+++ b/app/extensions/brave/locales/en-US/app.properties
@@ -123,10 +123,14 @@ inspectElement=Inspect Element
 urlCopied=URL copied to clipboard
 passwordCopied=Password copied to clipboard
 flashInstalled=Flash is already installed and can be enabled in Preferences > Security.
+widevineDisabled=Widevine is disabled but can be enabled in Preferences > Security.
+widevineNotInstalled=Widevine is not installed but can be installed in Preferences > Security.
 goToPrefs=Open Preferences
 goToAdobe=Reinstall Flash
 allowFlashPlayer=Allow {{origin}} to run Flash Player?
 ledgerBackupText=Your ledger keys are {{paymentId}} and {{passphrase}}
+allowWidevine=Allow {{origin}} to run Widevine?
+
 error=Error
 caseSensitivity=Match case
 nameField=Title:
