--- a/app/extensions/brave/locales/en-US/menu.properties
+++ b/app/extensions/brave/locales/en-US/menu.properties
@@ -3,6 +3,7 @@ closeTab=Close
 closeOtherTabs=Close other Tabs
 bookmarkPage=Bookmark Page
 bookmarkLink=Bookmark This Link
+bookmarkAdded=Bookmark Added
 openFile=Open File…
 openLocation=Open Location…
 openSearch=Search for "{{selectedVariable}}"
@@ -19,7 +20,8 @@ paste=Paste
 pasteAndGo=Paste and Go
 pasteAndSearch=Paste and Search
 pasteWithoutFormatting=Paste without formatting
-delete=Delete
+done=Done
+remove=Remove
 selectAll=Select All
 findNext=Find Next
 findPrevious=Find Previous
@@ -50,6 +52,7 @@ clearSiteData=Clear All Cookies and Site Data…
 recentlyClosed=Recently Closed
 recentlyVisited=Recently Visited
 bookmarks=Bookmarks
+viewBookmarks=View all bookmarks
 addToFavoritesBar=Add to Favorites Bar
 window=Window
 minimize=Minimize
