[WIP] default browser check

--- a/app/extensions/brave/locales/en-US/preferences.properties
+++ b/app/extensions/brave/locales/en-US/preferences.properties
@@ -246,3 +246,7 @@ importBrowserData=Import Browser Data
 importNow=Import now…
 clearAll=Clear all
 sendCrashReports=Send anonymous crash reports to Brave (requires browser restart)
+defaultBrowser=Brave is your default browser.
+notDefaultBrowser=Brave is not your default browser.
+setAsDefault=Set as default…
+checkDefaultOnStartup=Always check on startup
